# Hyv

./: .gitmodules  CMakeLists.txt  conanfile.txt
dev/: dev.cpp  meson.build
include/: definitions.h  global.h  logging.h
include/physics/: physics_components.h  physics_module.h  physics_tools.h
include/rendering/: buffer.h  mesh_renderer.h  pipeline.h  render_systems.h  rendering.h  rendering_components.h  rendering_module.h  rendering_systems_ctxt.h  shader.h  static_scene_guard.h
include/resource/: loader.h  resource.h  resource_components.h  resource_handler.h
include/windowing/: windowing.h  windowing_components.h
resources/shaders/rendering/: composite_ps.hlsl  composite_vs.hlsl  geometry_ps.hlsl  geometry_vs.hlsl
src/physics/: physics_module.cpp  physics_tools.cpp
src/rendering/: pipeline.cpp  render_systems.cpp  rendering.cpp  rendering_module.cpp  shader.cpp  static_scene_guard.cpp
src/resource/: loader.cpp  resource.cpp
src/windowing/: windowing.cpp
